Tweak on the textarea to prevent the input area jumping a couple of pixels in size between textarea and AddressTile

--- a/src/skins/vector/css/matrix-react-sdk/views/dialogs/ChatInviteDialog.css
+++ b/src/skins/vector/css/matrix-react-sdk/views/dialogs/ChatInviteDialog.css
@@ -18,7 +18,7 @@ limitations under the License.
 .mx_ChatInviteDialog_input,
 .mx_ChatInviteDialog_input:focus
 {
-    line-height: 34px;
+    height: 26px;
     font-size: 14px;
     padding-left: 12px;
     padding-right: 12px;
